# frappe_deep_agents

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
frappe_deep_agents/: api.py  hooks.py  modules.txt  realtime.py  tasks.py
frappe_deep_agents/doctype/agent_definition/: agent_definition.json
frappe_deep_agents/doctype/agent_message/: agent_message.py
frappe_deep_agents/doctype/agent_session/: agent_session.json
frappe_deep_agents/doctype/agent_todo/: agent_todo.py
frappe_deep_agents/doctype/agent_tool/: agent_tool.py
frappe_deep_agents/doctype/deep_agent_settings/: deep_agent_settings.json  deep_agent_settings.py
frappe_deep_agents/frappe_deep_agents/workspace/: deep_agents.json
frappe_deep_agents/public/frontend/: index.html
frappe_deep_agents/services/: __init__.py  agent_execution.py  llm_service.py  sandbox_service.py  yaml_service.py
frappe_deep_agents/tools/: __init__.py  bash.py  filesystem.py  frappe_tools.py  python_tools.py  search.py  todos.py  web_tools.py
frappe_deep_agents/www/: agent.html  agent.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/.claude/: ralph-loop.local.md
frontend/src/: App.vue  index.css  main.js  router.js  socket.js
frontend/src/components/: ActivitySidebar.vue  AgentFileList.vue  AgentStatusIndicator.vue  ChatInput.vue  ChatInterface.vue  ChatMessage.vue  FilePanel.vue  SessionSidebar.vue  TodoPanel.vue  ToolCallCard.vue
frontend/src/pages/: AgentWorkspace.vue  Home.vue
frontend/src/utils/: api.js  helpers.js
(+29 files in other folders)
